--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "torchao==0.14.0",
     "matplotlib>=3.10.8,<4.0.0",
     "numpy>=2.4.2,<3.0.0",
-    "shap (>=0.50.0,<0.51.0)"
+    "shap (>=0.50.0,<0.51.0)",
+    "pydantic (>=2.12.5,<3.0.0)"
 ]
 
 [tool.poetry]
